<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.patrickmealplanner_pmd.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_recipesBottomSheet"
            app:destination="@id/recipesBottomSheet" />
        <argument
            android:name="backFromBottomSheet"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_navigation_home_to_detailsActivity"
            app:destination="@id/detailsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.patrickmealplanner_pmd.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.patrickmealplanner_pmd.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <dialog
        android:id="@+id/recipesBottomSheet"
        android:name="com.example.patrickmealplanner_pmd.ui.home.bottomsheet.RecipesBottomSheet"
        android:label="fragment_recipes_bottom_sheet"
        tools:layout="@layout/fragment_recipes_bottom_sheet" >
        <action
            android:id="@+id/action_recipesBottomSheet_to_navigation_home"
            app:destination="@id/navigation_home" />
    </dialog>
    <activity
        android:id="@+id/detailsActivity"
        android:name="com.example.patrickmealplanner_pmd.ui.DetailsActivity"
        android:label="activity_details"
        tools:layout="@layout/activity_details" >
        <argument
            android:name="result"
            app:argType="com.example.patrickmealplanner_pmd.models.Result" />
    </activity>
</navigation>